로그인폼 css적용, mybatis에러 주석처리
-로그인폼 css 적용 ( 배경이미지 이유모를 404 못불러옴, css파일내에서 경로 상대경로로 수정)
-root-context 내 mybatis경로 잡는 bean태그 전부 주석처리 (서비스,레파지토리 만들고 다시풀것)
-톰캣 서버 옵션 변경

--- a/HMBBS/src/main/webapp/resources/css/custom/SignForm.css
+++ b/HMBBS/src/main/webapp/resources/css/custom/SignForm.css
@@ -7,7 +7,7 @@
 }
 
 body {
-	background-image: url("resources/images/signform_bg.jpg");
+	background-image: url("../../images/signform_bg.jpg");
 }
 
 h3 {
